--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
     <p class="phoneFooterInfo_text" style="padding: 0 8px;"><a target="_blank" href="http://m.lm1998.cn" >青海藜麦友情合作</a> </p>
 </div>
 <!--手机页脚end-->
-
+<script>
+(function(){
+ var bp = document.createElement('script');
+ var curProtocol = window.location.protocol.split(':')[0];
+ if (curProtocol === 'https') {
+ bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+ }
+ else {
+ bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+ }
+ var s = document.getElementsByTagName("script")[0];
+ s.parentNode.insertBefore(bp, s);
+})();
+</script>
 </body>
 </html>
